--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           { q: "El grafito en el Cab Franc es:", opts: ["Un defecto", "Inexistente", "Nota mineral característica"], correct: 2, type: "tinta" },
           { q: "¿En qué tipo de suelo destaca el Cab Franc?", opts: ["Calcáreo de altura", "Arcilloso pesado", "Arena pura"], correct: 0, type: "tinta" },
           { q: "¿Qué fruta roja domina en el Cab Franc?", opts: ["Solo uva", "Frambuesa", "Manzana"], correct: 1, type: "tinta" },
-          { q: "¿El Cab Franc argentino es más expresivo que el francés?", opts: ["No", "Son idénticos", "Sí"], correct: 2, type: "tinta" },
+          { q: "¿El Cab Franc argentino es más frutal que el francés?", opts: ["No", "Son idénticos", "Sí"], correct: 2, type: "tinta" },
           { q: "¿Qué estructura tiene el Cabernet Franc?", opts: ["Media con elegancia", "Muy pesada", "Muy ligera"], correct: 0, type: "tinta" },
           { q: "¿En qué región el Cab Franc es 'estrella'?", opts: ["San Rafael", "Valle de Uco", "La Rioja"], correct: 1, type: "tinta" },
           { q: "Las hierbas frescas en Cab Franc son:", opts: ["Defecto de cosecha verde", "Inexistentes", "Nota varietal positiva"], correct: 2, type: "tinta" },
@@ -222,7 +222,7 @@
           { q: "¿Dónde en Argentina destaca el Tannat?", opts: ["Buenos Aires", "Salta", "Neuquén"], correct: 1, type: "tinta" },
           { q: "¿Qué color tiene el Tannat?", opts: ["Amarillo", "Púrpura intenso", "Rosado"], correct: 1, type: "tinta" },
           { q: "¿Qué estructura tiene el Tannat?", opts: ["Ligera", "Astringente y potente", "Sin cuerpo"], correct: 1, type: "tinta" },
-          { q: "¿El Tannat de Salta es más amable que el uruguayo?", opts: ["No", "Sí", "Son idénticos"], correct: 1, type: "tinta" },
+          { q: "¿El Tannat de Salta es más frutal que el uruguayo?", opts: ["No", "Sí", "Son idénticos"], correct: 1, type: "tinta" },
           { q: "¿Qué aromas tiene el Tannat?", opts: ["Flores blancas", "Frutos negros, chocolate amargo", "Cítricos"], correct: 1, type: "tinta" },
           { q: "¿Cafayate produce Tannat?", opts: ["No", "Sí", "Solo blancas"], correct: 1, type: "tinta" },
           { q: "¿El Tannat necesita tiempo en botella?", opts: ["No", "Sí, para suavizar", "Es mejor joven"], correct: 1, type: "tinta" },
@@ -259,7 +259,7 @@
           { q: "¿Río Negro es zona de Semillon?", opts: ["No", "Sí", "Solo tintas"], correct: 1, type: "blanca" },
           { q: "El Semillon es una joya de:", opts: ["Nuevo mundo", "Viejo mundo", "No tiene valor"], correct: 1, type: "blanca" },
           { q: "¿Qué cepa es 'camaleón' por su versatilidad?", opts: ["Malbec", "Chardonnay", "Tannat"], correct: 1, type: "blanca" },
-          { q: "¿Cuál es la cepa más plantada blanca en Argentina?", opts: ["Torrontés", "Chardonnay", "Pedro Giménez"], correct: 2, type: "blanca" },
+          { q: "¿Cuál es la cepa blanca más plantada en Argentina?", opts: ["Torrontés", "Chardonnay", "Pedro Giménez"], correct: 2, type: "blanca" },
           { q: "¿Qué cepa tiene taninos 'dulces y redondos'?", opts: ["Malbec", "Tannat", "Cabernet Franc"], correct: 0, type: "tinta" },
           { q: "¿Cuál tiene color 'violáceo casi negro'?", opts: ["Pinot Noir", "Petit Verdot", "Garnacha"], correct: 1, type: "tinta" },
           { q: "¿Qué cepa es 'la estrella ascendente'?", opts: ["Bonarda", "Cabernet Franc", "Ancellotta"], correct: 1, type: "tinta" },
@@ -270,14 +270,14 @@
           { q: "¿Cuál es 100% nativa argentina?", opts: ["Malbec", "Torrontés", "Chardonnay"], correct: 1, type: "blanca" },
           { q: "¿Qué cepa tiene 'textura oleosa'?", opts: ["Sauvignon Blanc", "Semillon", "Torrontés"], correct: 1, type: "blanca" },
           { q: "¿Cuál es 'feudo de San Juan'?", opts: ["Pinot Noir", "Syrah", "Chardonnay"], correct: 1, type: "tinta" },
-          { q: "¿Qué cepa es 'más amable en Salta que Uruguay'?", opts: ["Merlot", "Tannat", "Cabernet"], correct: 1, type: "tinta" },
+          { q: "¿Qué cepa es más frutal en Salta que en Uruguay?", opts: ["Merlot", "Tannat", "Cabernet"], correct: 1, type: "tinta" },
           { q: "¿Cuál tiene aroma a 'jazmín y rosa'?", opts: ["Malbec", "Torrontés", "Syrah"], correct: 1, type: "blanca" },
           { q: "¿Qué cepa logra 'perfiles cárnicos únicos'?", opts: ["Pinot en Patagonia", "Syrah en San Juan", "Malbec en Salta"], correct: 1, type: "tinta" },
           { q: "¿Cuál es 'rojo traslúcido'?", opts: ["Malbec", "Pinot Noir", "Petit Verdot"], correct: 1, type: "tinta" },
           { q: "¿Qué cepa brilla como varietal por el sol mendocino?", opts: ["Pinot Noir", "Petit Verdot", "Garnacha"], correct: 1, type: "tinta" },
-          { q: "¿Cuál es difícil: 'el calor la destruye'?", opts: ["Syrah", "Pinot Noir", "Malbec"], correct: 1, type: "tinta" },
+          { q: "¿A cuál cepa 'el calor la destruye'?", opts: ["Syrah", "Pinot Noir", "Malbec"], correct: 1, type: "tinta" },
           { q: "¿Qué cepa tiene 'taninos muy suaves'?", opts: ["Tannat", "Bonarda", "Cabernet"], correct: 1, type: "tinta" },
-          { q: "¿Cuál es 'más expresivo que en Francia'?", opts: ["Malbec", "Cabernet Franc", "Chardonnay"], correct: 1, type: "tinta" },
+          { q: "¿Cuál es 'más frutal que en Francia'?", opts: ["Malbec", "Cabernet Franc", "Chardonnay"], correct: 1, type: "tinta" },
           { q: "¿Qué cepa italiana tiene 'alta acidez natural'?", opts: ["Nebbiolo", "Barbera", "Sangiovese"], correct: 1, type: "tinta" },
           { q: "¿Cuál es usada principalmente para dar color?", opts: ["Garnacha", "Ancellotta", "Pinot"], correct: 1, type: "tinta" },
           { q: "¿Qué cepa es rareza italiana con acidez marcada?", opts: ["Malbec", "Teroldego", "Syrah"], correct: 1, type: "tinta" },
